[package]
name = "exile-ggpk"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust library for reading Path of Exile GGPK and Bundle files"
repository = "https://github.com/Multipl-dev/exile-ggpk"
keywords = ["poe", "path-of-exile", "ggpk", "game-data"]
categories = ["game-development", "parsing"]

# Based on ggpk-explorer by JuddIsJudd (GPL-3.0)
# https://github.com/juddisjudd/ggpk-explorer

[lib]
name = "exile_ggpk"
path = "src/lib.rs"

[dependencies]
# Core parsing
memmap2 = "0.9"
byteorder = "1.5"

# Serialization (for index caching)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# FFI for ooz
libc = "0.2"

[build-dependencies]
cc = "1.2"
bindgen = "0.71"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
